--- a/results/plot_feet_z.ipynb
+++ b/results/plot_feet_z.ipynb
@@ -80,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_feetz_p2 = pd.read_csv(f\"./feetz/feet_z_peak_bi_50_150.csv\")\n",
-    "df_feetz_p1 = pd.read_csv(f\"./feetz/feet_z_peak_uni_50_150.csv\")\n",
+    "df_feetz_p2 = pd.read_csv(f\"./feet/Z/feet_z_peak_bi_50_150.csv\")\n",
+    "df_feetz_p1 = pd.read_csv(f\"./feet/Z/feet_z_peak_uni_50_150.csv\")\n",
     "\n",
-    "df_feetz_z2 = pd.read_csv(f\"./feetz/feet_z_zero_bi_50_150.csv\")\n",
-    "df_feetz_z1 = pd.read_csv(f\"./feetz/feet_z_zero_uni_50_150.csv\")\n",
-    "df_feetz_bf = pd.read_csv(f\"./feetz/feet_z_zero_bothfeet_50_150.csv\")\n",
+    "df_feetz_z2 = pd.read_csv(f\"./feet/Z/feet_z_zero_bi_50_150.csv\")\n",
+    "df_feetz_z1 = pd.read_csv(f\"./feet/Z/feet_z_zero_uni_50_150.csv\")\n",
+    "df_feetz_bf = pd.read_csv(f\"./feet/Z/feet_z_zero_bothfeet_50_150.csv\")\n",
     "\n",
     "ref = df_feetz_p2[\"bpm\"].to_numpy()\n",
     "\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,19 +123,211 @@
     "}\n",
     "\n",
     "method_labels = [\"Method-1\", \"Method-2\"]\n",
-    "results = {\"experiment\": [], \"method\": [],\"acc1\":[], \"acc2\": [], }\n",
+    "results = {\"experiment\": [], \"method\": [],\"acc1\":[], \"acc2\": [], \n",
+    "           \"hits_idx\": [], \"hits_dbl_idx\": [], \"hits_hf_idx\": [] }\n",
     "\n",
     "tolerance = 8\n",
     "for exp_name, data in experiments.items():\n",
     "    for mlabel, calculated in zip(method_labels, data):\n",
-    "        metrics = calculate_metrics_with_oe(ref, calculated, tolerance = tolerance)\n",
+    "        metrics, hits_idx, hits_dbl_idx, hits_hf_idx = calculate_metrics_with_oe(ref, calculated, tolerance = tolerance)\n",
     "        \n",
     "        results[\"experiment\"].append(exp_name)\n",
     "        results[\"method\"].append(mlabel)\n",
     "        results[\"acc1\"].append(metrics[\"acc1\"])\n",
     "        results[\"acc2\"].append(metrics[\"acc2\"])\n",
     "        \n",
+    "        results[\"hits_idx\"].append(hits_idx)\n",
+    "        results[\"hits_dbl_idx\"].append(hits_dbl_idx)\n",
+    "        results[\"hits_hf_idx\"].append(hits_hf_idx)\n",
+    "        \n",
     "results_df = pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>experiment</th>\n",
+       "      <th>method</th>\n",
+       "      <th>acc1</th>\n",
+       "      <th>acc2</th>\n",
+       "      <th>hits_idx</th>\n",
+       "      <th>hits_dbl_idx</th>\n",
+       "      <th>hits_hf_idx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>peak_uni</td>\n",
+       "      <td>Method-1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>52.777778</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[2, 5, 7, 9, 10, 12, 13, 16, 17, 18, 19, 20, 2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>peak_uni</td>\n",
+       "      <td>Method-2</td>\n",
+       "      <td>33.333333</td>\n",
+       "      <td>8.333333</td>\n",
+       "      <td>[2, 5, 9, 12, 16, 17, 18, 21, 25, 30, 32, 34]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[3, 23, 26]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>peak_bi</td>\n",
+       "      <td>Method-1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>13.888889</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[3, 5, 11, 20, 29]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>peak_bi</td>\n",
+       "      <td>Method-2</td>\n",
+       "      <td>5.555556</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>[3, 20]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[7, 8, 9, 10, 15, 21, 22, 26, 34]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>zero_uni</td>\n",
+       "      <td>Method-1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>69.444444</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[0, 2, 4, 5, 7, 8, 9, 10, 12, 13, 15, 16, 17, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>zero_uni</td>\n",
+       "      <td>Method-2</td>\n",
+       "      <td>44.444444</td>\n",
+       "      <td>2.777778</td>\n",
+       "      <td>[0, 2, 4, 7, 10, 12, 15, 16, 17, 18, 21, 25, 3...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>zero_bi</td>\n",
+       "      <td>Method-1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>63.888889</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[0, 2, 3, 6, 7, 8, 9, 10, 12, 13, 15, 16, 17, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>zero_bi</td>\n",
+       "      <td>Method-2</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>[2, 3, 6, 7, 8, 12, 15, 16, 17, 18, 21, 22, 24...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>both_feet</td>\n",
+       "      <td>Method-1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[0, 2, 4, 5, 7, 9, 12, 13, 14, 15, 16, 17, 18,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>both_feet</td>\n",
+       "      <td>Method-2</td>\n",
+       "      <td>61.111111</td>\n",
+       "      <td>2.777778</td>\n",
+       "      <td>[0, 2, 4, 7, 9, 12, 13, 15, 16, 17, 18, 20, 21...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[26]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  experiment    method       acc1       acc2  \\\n",
+       "0   peak_uni  Method-1   0.000000  52.777778   \n",
+       "1   peak_uni  Method-2  33.333333   8.333333   \n",
+       "2    peak_bi  Method-1   0.000000  13.888889   \n",
+       "3    peak_bi  Method-2   5.555556  25.000000   \n",
+       "4   zero_uni  Method-1   0.000000  69.444444   \n",
+       "5   zero_uni  Method-2  44.444444   2.777778   \n",
+       "6    zero_bi  Method-1   0.000000  63.888889   \n",
+       "7    zero_bi  Method-2  50.000000   0.000000   \n",
+       "8  both_feet  Method-1   0.000000  75.000000   \n",
+       "9  both_feet  Method-2  61.111111   2.777778   \n",
+       "\n",
+       "                                            hits_idx hits_dbl_idx  \\\n",
+       "0                                                 []           []   \n",
+       "1      [2, 5, 9, 12, 16, 17, 18, 21, 25, 30, 32, 34]           []   \n",
+       "2                                                 []           []   \n",
+       "3                                            [3, 20]           []   \n",
+       "4                                                 []           []   \n",
+       "5  [0, 2, 4, 7, 10, 12, 15, 16, 17, 18, 21, 25, 3...           []   \n",
+       "6                                                 []           []   \n",
+       "7  [2, 3, 6, 7, 8, 12, 15, 16, 17, 18, 21, 22, 24...           []   \n",
+       "8                                                 []           []   \n",
+       "9  [0, 2, 4, 7, 9, 12, 13, 15, 16, 17, 18, 20, 21...           []   \n",
+       "\n",
+       "                                         hits_hf_idx  \n",
+       "0  [2, 5, 7, 9, 10, 12, 13, 16, 17, 18, 19, 20, 2...  \n",
+       "1                                        [3, 23, 26]  \n",
+       "2                                 [3, 5, 11, 20, 29]  \n",
+       "3                  [7, 8, 9, 10, 15, 21, 22, 26, 34]  \n",
+       "4  [0, 2, 4, 5, 7, 8, 9, 10, 12, 13, 15, 16, 17, ...  \n",
+       "5                                                [3]  \n",
+       "6  [0, 2, 3, 6, 7, 8, 9, 10, 12, 13, 15, 16, 17, ...  \n",
+       "7                                                 []  \n",
+       "8  [0, 2, 4, 5, 7, 9, 12, 13, 14, 15, 16, 17, 18,...  \n",
+       "9                                               [26]  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df"
    ]
   },
   {
