--- a/tempo_estimation_position_2S_perAxis.ipynb
+++ b/tempo_estimation_position_2S_perAxis.ipynb
@@ -23,7 +23,7 @@
     "from scipy.signal import find_peaks\n",
     "from pydub.generators import Triangle\n",
     "import mir_eval\n",
-    "from compute_tempo import *\n",
+    "from compute_tempo_pos import *\n",
     "from mutils import DataHandler\n",
     "from dance_evaluation import *"
    ]
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
       "Computing tempograms...\n",
       "Computing max method...\n",
       "Computing weighted method...\n",
-      "Results saved to ./results/vel_2s/foot/peraxis/foot_peraxis_zero_bi_70_145.csv\n"
+      "Results saved to ./results/pos_2s/foot/peraxis/foot_peraxis_zero_bi_70_145.csv\n"
      ]
     }
    ],
@@ -518,31 +518,38 @@
     "    sensorA_seg_name = 'SEGMENT_RIGHT_FOOT'\n",
     "    sensorB_seg_name = 'SEGMENT_LEFT_FOOT'\n",
     "\n",
-    "    sensorA_position = motion_data['position'][sensorA_seg_name][start_f:end_f, :]    # size (n, 3)    [start_f:end_f,:]\n",
-    "    sensorB_position = motion_data['position'][sensorB_seg_name][start_f:end_f, :]    # size (n, 3)    [start_f:end_f,:]\n",
+    "    sensorA_pos_data = motion_data['position'][sensorA_seg_name][start_f:end_f, :]    # size (n, 3)    [start_f:end_f,:]\n",
+    "    sensorB_pos_data = motion_data['position'][sensorB_seg_name][start_f:end_f, :]    # size (n, 3)    [start_f:end_f,:]\n",
     "\n",
-    "    sensorA_velocity = motion_data['velocity'][sensorA_seg_name][start_f:end_f, :]    # size (n, 3)    [start_f:end_f,:]\n",
-    "    sensorB_velocity = motion_data['velocity'][sensorB_seg_name][start_f:end_f, :]    # size (n, 3)    [start_f:end_f,:]\n",
+    "    sensorA_position = detrend_signal_array(sensorA_pos_data, cutoff= 0.5)\n",
+    "    sensorB_position = detrend_signal_array(sensorB_pos_data, cutoff= 0.5)\n",
     "\n",
-    "\n",
-    "    sensorA_position = detrend_signal_array(sensorA_position, cutoff= 0.5)\n",
-    "    sensorB_position = detrend_signal_array(sensorB_position, cutoff= 0.5)\n",
-    "\n",
-    "\n",
-    "    sensorA_velocity = detrend_signal_array(sensorA_velocity, cutoff= 0.5)\n",
-    "    sensorB_velocity = detrend_signal_array(sensorB_velocity, cutoff= 0.5)\n",
-    "\n",
-    "    novelty_length = len(sensorA_velocity)\n",
+    "    novelty_length = len(sensorA_position)\n",
     "    time_axis = np.arange(novelty_length)/240\n",
     "    bpm_axes = []\n",
     "    mag_axes = []\n",
     "\n",
     "    mode= \"zero_bi\"\n",
     "    for ax in range(3):\n",
-    "        tempo_json = main_two_sensor(sensorA_velocity[:,ax].reshape(-1,1), sensorB_velocity[:,ax].reshape(-1,1), \n",
-    "                                                sensorA_position[:,ax].reshape(-1,1), sensorB_position[:,ax].reshape(-1,1), \n",
-    "                                                mocap_fps, window_size, hop_size, tempi_range, distance_threshold=0.025,\n",
-    "                                                T_filter= 0.25, mode=mode)\n",
+    "        \n",
+    "        posA_min, posA_max = np.min(sensorA_position[:, ax]), np.max(sensorA_position[:, ax])\n",
+    "        sensorA_position_norm = (\n",
+    "                2*(sensorA_position[:, ax] - posA_min) / (posA_max - posA_min) - 1\n",
+    "                if posA_max != posA_min \n",
+    "                else np.zeros_like(sensorA_position[:, ax])\n",
+    "            )\n",
+    "\n",
+    "        posB_min, posB_max = np.min(sensorB_position[:, ax]), np.max(sensorB_position[:, ax])\n",
+    "        sensorB_position_norm = (\n",
+    "                2*(sensorB_position[:, ax] - posB_min) / (posB_max - posB_min) - 1\n",
+    "                if posB_max != posB_min\n",
+    "                else np.zeros_like(sensorB_position[:, ax])\n",
+    "            )\n",
+    "        \n",
+    "        \n",
+    "        tempo_json = main_two_sensor(sensorA_position_norm.reshape(-1,1), sensorB_position_norm.reshape(-1,1),  \n",
+    "                                    mocap_fps, window_size, hop_size, tempi_range,\n",
+    "                                    T_filter= 0.25, mode=mode)\n",
     "\n",
     "\n",
     "        # sensorA_abs_vel = tempo_json[\"sensorA_abs_vel\"]\n",
@@ -552,27 +559,27 @@
     "        # sensorA_dir_change_f = tempo_json[\"sensorA_dir_change_f\"]\n",
     "        # sensorB_dir_change_f = tempo_json[\"sensorB_dir_change_f\"]\n",
     "                                                        \n",
-    "        sensorAB_onsets = tempo_json[\"sensorAB_onsets\"]\n",
+    "        # sensorAB_onsets = tempo_json[\"sensorAB_onsets\"]\n",
     "\n",
-    "        tempogram_ab = tempo_json[\"tempogram_ab\"]\n",
-    "        time_axis_seconds = tempo_json[\"time_axis_seconds\"]\n",
-    "        tempo_axis_bpm = tempo_json[\"tempo_axis_bpm\"]\n",
+    "        # tempogram_ab = tempo_json[\"tempogram_ab\"]\n",
+    "        # time_axis_seconds = tempo_json[\"time_axis_seconds\"]\n",
+    "        # tempo_axis_bpm = tempo_json[\"tempo_axis_bpm\"]\n",
     "\n",
     "        tempo_data_maxmethod = tempo_json[\"tempo_data_maxmethod\"]\n",
-    "        tempo_data_weightedkernel = tempo_json[\"tempo_data_weightedkernel\"]\n",
+    "        # tempo_data_weightedkernel = tempo_json[\"tempo_data_weightedkernel\"]\n",
     "        # tempo_data_combinedtempogram = tempo_json[\"tempo_data_combinedtempogram\"]\n",
     "\n",
     "        # Max method\n",
-    "        Aestimated_beat_pulse = tempo_data_maxmethod[\"estimated_beat_pulse\"]\n",
-    "        Atempo_curve = tempo_data_maxmethod[\"tempo_curve\"]\n",
-    "        Atempo_curve_time_axis = tempo_data_weightedkernel[\"tempo_curve_time_axis\"]\n",
+    "        # Aestimated_beat_pulse = tempo_data_maxmethod[\"estimated_beat_pulse\"]\n",
+    "        # Atempo_curve = tempo_data_maxmethod[\"tempo_curve\"]\n",
+    "        # Atempo_curve_time_axis = tempo_data_weightedkernel[\"tempo_curve_time_axis\"]\n",
     "\n",
     "        bpmA_arr = tempo_data_maxmethod[\"bpm_arr\"]\n",
     "        magA_arr = tempo_data_maxmethod[\"mag_arr\"]\n",
     "        tempo_A = np.round(np.average(bpmA_arr), 2)\n",
     "\n",
     "        bpm_axes.append(bpmA_arr)\n",
-    "        \n",
+    "\n",
     "        if ax == 0:\n",
     "            result[\"piece\"].append(piece_name)\n",
     "            result[\"bpm\"].append(np.round(bpm,2))\n",
@@ -586,8 +593,8 @@
     "\n",
     "        mag_axes.append(magA_arr)\n",
     "        mag_axes_arr = np.column_stack(mag_axes)    # n by 3 array\n",
-    "    \n",
-    "    bpm_axes_arr = np.column_stack(bpm_axes)    # n by 3 array    \n",
+    "        \n",
+    "    bpm_axes_arr = np.column_stack(bpm_axes)    # n by 3 array\n",
     "    bpm_mode = stats.mode(bpm_axes_arr.flatten())[0]\n",
     "    bpm_median = np.median(bpm_axes_arr.flatten())\n",
     "    result[\"bpm_mode\"].append(bpm_mode)\n",
@@ -607,10 +614,12 @@
     "# dance_bpm = data_handler.calc_tempo_from_onsets(dance_onset)\n",
     "\n",
     "results_df = pd.DataFrame(result)\n",
-    "csv_filename = f\"./results/vel_2s/foot/peraxis/foot_peraxis_{mode}_70_145.csv\"\n",
+    "csv_filename = f\"./results/pos_2s/foot/peraxis/foot_peraxis_{mode}_70_145.csv\"\n",
     "results_df.to_csv(csv_filename, index=False)\n",
     "print(f\"Results saved to {csv_filename}\")  \n",
-    "\n"
+    "\n",
+    "# print(\"bpm:\", bpm)\n",
+    "# print(\"A:\", tempo_A)"
    ]
   },
   {
