--- a/tempo_estimation_position_1S_perAxis.ipynb
+++ b/tempo_estimation_position_1S_perAxis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,90 +34,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pkl_filelist = os.listdir(f\"/itf-fi-ml/home/sagardu/djembe_drive/sgr_pyspace/Dataset_V2\")\n",
-    "pkl_filelist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# mvnfiles = [\"BKO_E1_D1_01_Suku_T.mvnx\", \"BKO_E1_D1_02_Maraka_T.mvnx\", \"BKO_E1_D1_03_Wasulunka_T.mvnx\", \"BKO_E1_D2_04_Maraka_T.mvnx\"]\n",
     "\n",
     "# filename = mvnfiles[2]\n",
     "# piece_name = os.path.basename(filename).split(\".\")[0]\n",
     "# data_handler = DataHandler()\n",
     "# motion_data, drum_onsets, start_f, end_f, start_t, end_t, cycle_onsets, beat_ref, bpm = data_handler.load_and_process_data(filename, mode = 'gr', drum = 'J2', section_idx=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# SEGMENT_HEAD  SEGMENT_PELVIS   SEGMENT_T8  SEGMENT_LEFT_HAND  SEGMENT_LEFT_FOOT\n",
-    "pkl_filelist = os.listdir(f\"/itf-fi-ml/home/sagardu/djembe_drive/sgr_pyspace/Dataset_V2\")\n",
-    "data_handler = DataHandler()\n",
-    "\n",
-    "for idx, filename in enumerate(pkl_filelist):\n",
-    "\n",
-    "    filename = filename.replace(\"_Dancers.csv\", \"_T.mvnx\")\n",
-    "    piece_name = os.path.basename(filename).split(\".\")[0]\n",
-    "    try:\n",
-    "        motion_data, drum_onsets, start_f, end_f, start_t, end_t, cycle_onsets, beat_ref, bpm = data_handler.load_and_process_data(filename, mode = 'gr', drum = 'J2', section_idx=0)\n",
-    "    except ValueError as e:\n",
-    "        # Handle the error and continue\n",
-    "        print(f\"Error encountered for: {e}\")\n",
-    "        continue\n",
-    "\n",
-    "    duration = int(end_t-start_t)\n",
-    "    w_sec = int(duration)\n",
-    "    h_sec = int(w_sec/4)\n",
-    "\n",
-    "    mocap_fps = 240\n",
-    "    window_size = int(240*w_sec)\n",
-    "    hop_size = int(240*h_sec)\n",
-    "    tempi_range = np.arange(30,145,1)   # good: 70,145   \n",
-    "\n",
-    "    sensorA_position = motion_data['position'][\"SEGMENT_LEFT_HAND\"][start_f:end_f, :]\n",
-    "\n",
-    "    pos_min, pos_max = np.min(sensorA_position), np.max(sensorA_position)\n",
-    "    sensorA_position_norm = (sensorA_position - pos_min) / (pos_max - pos_min) if pos_max != pos_min else np.zeros_like(sensorA_position)\n",
-    "    \n",
-    "    sensorA_positionde = detrend_signal_array(sensorA_position_norm, cutoff= 0.5)\n",
-    "    sensorA_positionde = smooth_velocity(sensorA_positionde, abs=\"no\", window_length= 100)\n",
-    "    \n",
-    "    sensorA_positionde[sensorA_positionde < 0] = 0\n",
-    "    \n",
-    "    novelty_length = len(sensorA_position)\n",
-    "    time_axis = np.arange(novelty_length)/mocap_fps\n",
-    "    bpm_axes = []\n",
-    "    mag_axes = []\n",
-    "    for ax in range(3):\n",
-    "        sensorA_pos = sensorA_positionde[:, ax].reshape(-1,1)\n",
-    "        \n",
-    "        minima_indices = argrelmax(sensorA_pos, order=30, )[0]\n",
-    "        binary_onset_data = np.zeros(len(sensorA_pos))\n",
-    "        binary_onset_data[minima_indices] = 1\n",
-    "\n",
-    "        idxx = np.where(binary_onset_data.flatten() > 0)[0]\n",
-    "\n",
-    "        fig, axs = plt.subplots(1, 1, figsize=(15, 4), dpi=100)\n",
-    "        fig.suptitle('Position and Velocity')\n",
-    "\n",
-    "        axs.plot(sensorA_pos, label=\"position\")\n",
-    "        axs.scatter(idxx, sensorA_pos[idxx], color='r', marker='x', label=\"Direction Change\")\n",
-    "        # axs.hlines(y = 0.005,)\n",
-    "        axs.set_title(f\"{ax} axis\")\n",
-    "        axs.legend()\n",
-    "        plt.tight_layout()\n",
-    "        plt.show()\n",
-    "        \n",
-    "    if idx == 3:    \n",
-    "        break"
    ]
   },
   {
@@ -129,9 +51,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded BKO_E1_D1_08_Suku_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E3_D5_03_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_05_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_01_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_03_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D2_04_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D5_01_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_02_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_06_Manjanin_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_01_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D5_13_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D5_05_Sandia_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E1_D1_02_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_05_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_14_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_03_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D5_01_Maraka_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E3_D5_04_Dansa_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_04_Dansa_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_01_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D2_06_Dansa_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_02_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_12_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_07_Suku_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E1_D5_02_Dansa_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E2_D3_02_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D2_05_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_04_Dansa_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D2_03_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_06_Manjanin_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_06_Manjanin_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_13_Suku_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E2_D3_11_Suku_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E3_D6_04_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_01_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_06_Manjanin_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D5_05_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_03_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_05_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D2_07_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_03_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D5_04_Suku_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E3_D5_06_Manjanin_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_10_Dansa_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D5_02_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_12_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Results saved to ./results/pos_1s/au/tempo_70_145/foot/left_foot_zero_uni_70_145.csv\n",
+      "Loaded BKO_E1_D1_08_Suku_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E3_D5_03_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_05_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_01_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_03_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D2_04_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D5_01_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_02_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_06_Manjanin_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_01_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D5_13_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D5_05_Sandia_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E1_D1_02_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_05_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_14_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_03_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D5_01_Maraka_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E3_D5_04_Dansa_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_04_Dansa_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_01_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D2_06_Dansa_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_02_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D4_12_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_07_Suku_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E1_D5_02_Dansa_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E2_D3_02_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D2_05_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_04_Dansa_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D2_03_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_06_Manjanin_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_06_Manjanin_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_13_Suku_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E2_D3_11_Suku_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E3_D6_04_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_01_Maraka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_06_Manjanin_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D5_05_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_03_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D1_05_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D2_07_Sandia_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E2_D3_03_Wasulunka_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E1_D5_04_Suku_T.pkl\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
+      "Loaded BKO_E3_D5_06_Manjanin_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_10_Dansa_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D5_02_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Loaded BKO_E3_D6_12_Suku_T.pkl\n",
+      "Total Sections: 1\n",
+      "Results saved to ./results/pos_1s/au/tempo_70_145/foot/left_foot_zero_bi_70_145.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# SEGMENT_HEAD  SEGMENT_PELVIS   SEGMENT_T8  SEGMENT_LEFT_HAND  SEGMENT_LEFT_FOOT\n",
     "pkl_filelist = os.listdir(f\"/itf-fi-ml/home/sagardu/djembe_drive/sgr_pyspace/Dataset_V2\")\n",
@@ -159,11 +274,15 @@
     "    \"median_z\": [],\n",
     "    }\n",
     "    for idx, filename in enumerate(pkl_filelist):\n",
-    "\n",
+    "          \n",
     "        filename = filename.replace(\"_Dancers.csv\", \"_T.mvnx\")\n",
     "        piece_name = os.path.basename(filename).split(\".\")[0]\n",
+    "        \n",
+    "        if piece_name == \"BKO_E2_D3_04_Dansa_T\":\n",
+    "            continue\n",
+    "        \n",
     "        try:\n",
-    "            motion_data, drum_onsets, start_f, end_f, start_t, end_t, cycle_onsets, beat_ref, bpm = data_handler.load_and_process_data(filename, mode = 'gr', drum = 'J2', section_idx=0)\n",
+    "            motion_data, drum_onsets, start_f, end_f, start_t, end_t, cycle_onsets, beat_ref, bpm = data_handler.load_and_process_data(filename, mode = 'au', drum = 'J2', section_idx=0)\n",
     "        except ValueError as e:\n",
     "            # Handle the error and continue\n",
     "            print(f\"Error encountered for: {e}\")\n",
@@ -176,9 +295,13 @@
     "        mocap_fps = 240\n",
     "        window_size = int(240*w_sec)\n",
     "        hop_size = int(240*h_sec)\n",
-    "        tempi_range = np.arange(70,145,1)   # good: 70,145   \n",
-    "\n",
-    "        sensorA_pos_data = motion_data['position'][\"SEGMENT_LEFT_HAND\"][start_f:end_f, :]\n",
+    "        \n",
+    "        a = 70; b = 145\n",
+    "        tempi_range = np.arange(a,b,1)   # good: 70,145   \n",
+    "        subdir = \"foot\"\n",
+    "        limb = \"left_foot\"\n",
+    "        \n",
+    "        sensorA_pos_data = motion_data['position'][\"SEGMENT_LEFT_FOOT\"][start_f:end_f, :]\n",
     "        sensorA_position = detrend_signal_array(sensorA_pos_data, cutoff= 0.5)\n",
     "\n",
     "        \n",
@@ -273,8 +396,8 @@
     "                result[\"Z_a\"].append(tempo_A)\n",
     "                result[\"Z_b\"].append(tempo_B)\n",
     "\n",
-    "            print(f\"bpmA_{ax}:\", bpmA_arr)\n",
-    "            print(\"Average A:\", tempo_A)                           # [start_f:end_f]\n",
+    "            # print(f\"bpmA_{ax}:\", bpmA_arr)\n",
+    "            # print(\"Average A:\", tempo_A)                           # [start_f:end_f]\n",
     "\n",
     "            \n",
     "            mag_axes.append(magA_arr)\n",
@@ -290,7 +413,7 @@
     "\n",
     "            \n",
     "    results_df = pd.DataFrame(result)\n",
-    "    csv_filename = f\"./results/pos_1s/hand/peraxis/hand_peraxis_{mode}_70_145.csv\"\n",
+    "    csv_filename = f\"./results/pos_1s/au/tempo_{a}_{b}/{subdir}/{limb}_{mode}_{a}_{b}.csv\"\n",
     "    results_df.to_csv(csv_filename, index=False)\n",
     "    print(f\"Results saved to {csv_filename}\")  \n",
     "\n",
