--- a/tempo_estimation_position_2S_perAxis.ipynb
+++ b/tempo_estimation_position_2S_perAxis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
      "output_type": "stream",
      "text": [
       "Loaded BKO_E1_D1_08_Suku_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
       "Loaded BKO_E3_D5_03_Wasulunka_T.pkl\n",
       "Total Sections: 1\n",
       "Computing tempograms...\n",
@@ -171,7 +171,7 @@
       "Computing max method...\n",
       "Computing weighted method...\n",
       "Loaded BKO_E1_D5_05_Sandia_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
       "Loaded BKO_E1_D1_02_Maraka_T.pkl\n",
       "Total Sections: 1\n",
       "Computing tempograms...\n",
@@ -217,9 +217,18 @@
       "Computing max method...\n",
       "Computing weighted method...\n",
       "Loaded BKO_E1_D5_01_Maraka_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
       "Loaded BKO_E3_D5_04_Dansa_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Total Sections: 1\n",
+      "Computing tempograms...\n",
+      "Computing max method...\n",
+      "Computing weighted method...\n",
+      "Computing tempograms...\n",
+      "Computing max method...\n",
+      "Computing weighted method...\n",
+      "Computing tempograms...\n",
+      "Computing max method...\n",
+      "Computing weighted method...\n",
       "Loaded BKO_E2_D4_04_Dansa_T.pkl\n",
       "Total Sections: 1\n",
       "Computing tempograms...\n",
@@ -243,7 +252,16 @@
       "Computing max method...\n",
       "Computing weighted method...\n",
       "Loaded BKO_E1_D2_06_Dansa_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Total Sections: 1\n",
+      "Computing tempograms...\n",
+      "Computing max method...\n",
+      "Computing weighted method...\n",
+      "Computing tempograms...\n",
+      "Computing max method...\n",
+      "Computing weighted method...\n",
+      "Computing tempograms...\n",
+      "Computing max method...\n",
+      "Computing weighted method...\n",
       "Loaded BKO_E2_D4_02_Maraka_T.pkl\n",
       "Total Sections: 1\n",
       "Computing tempograms...\n",
@@ -267,9 +285,9 @@
       "Computing max method...\n",
       "Computing weighted method...\n",
       "Loaded BKO_E1_D1_07_Suku_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
       "Loaded BKO_E1_D5_02_Dansa_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
       "Loaded BKO_E2_D3_02_Suku_T.pkl\n",
       "Total Sections: 1\n",
       "Computing tempograms...\n",
@@ -337,9 +355,9 @@
       "Computing max method...\n",
       "Computing weighted method...\n",
       "Loaded BKO_E2_D3_13_Suku_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
       "Loaded BKO_E2_D3_11_Suku_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
       "Loaded BKO_E3_D6_04_Sandia_T.pkl\n",
       "Total Sections: 1\n",
       "Computing tempograms...\n",
@@ -429,7 +447,7 @@
       "Computing max method...\n",
       "Computing weighted method...\n",
       "Loaded BKO_E1_D5_04_Suku_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
       "Loaded BKO_E3_D5_06_Manjanin_T.pkl\n",
       "Total Sections: 1\n",
       "Computing tempograms...\n",
@@ -453,7 +471,7 @@
       "Computing max method...\n",
       "Computing weighted method...\n",
       "Loaded BKO_E2_D3_04_Dansa_T.pkl\n",
-      "Error encountered for: Group 'gr' not found in the dataset.\n",
+      "Error encountered for: Group 'au' not found in the dataset.\n",
       "Loaded BKO_E3_D5_02_Suku_T.pkl\n",
       "Total Sections: 1\n",
       "Computing tempograms...\n",
@@ -476,7 +494,7 @@
       "Computing tempograms...\n",
       "Computing max method...\n",
       "Computing weighted method...\n",
-      "Results saved to ./results/pos_2s/foot/peraxis/foot_peraxis_zero_bi_70_145.csv\n"
+      "Results saved to ./results/pos_2s/au/tempo_70_145/hand/hand_zero_uni_70_145.csv\n"
      ]
     }
    ],
@@ -499,13 +517,17 @@
     "\n",
     "    filename = filename.replace(\"_Dancers.csv\", \"_T.mvnx\")\n",
     "    piece_name = os.path.basename(filename).split(\".\")[0]\n",
+    "    \n",
+    "    # if piece_name == \"BKO_E2_D3_04_Dansa_T\":\n",
+    "    #         continue\n",
+    "    \n",
     "    try:\n",
-    "        motion_data, drum_onsets, start_f, end_f, start_t, end_t, cycle_onsets, beat_ref, bpm = data_handler.load_and_process_data(filename, mode = 'gr', drum = 'J2', section_idx=0)\n",
+    "        motion_data, drum_onsets, start_f, end_f, start_t, end_t, cycle_onsets, beat_ref, bpm = data_handler.load_and_process_data(filename, mode = 'au', drum = 'J2', section_idx=0)\n",
     "    except ValueError as e:\n",
     "        # Handle the error and continue\n",
     "        print(f\"Error encountered for: {e}\")\n",
     "        continue\n",
-    "\n",
+    "    \n",
     "    duration = int(end_t-start_t)\n",
     "    w_sec = int(duration)\n",
     "    h_sec = int(w_sec/4)\n",
@@ -513,10 +535,14 @@
     "    mocap_fps = 240\n",
     "    window_size = int(240*w_sec)\n",
     "    hop_size = int(240*h_sec)\n",
-    "    tempi_range = np.arange(70,145,1)\n",
-    "\n",
-    "    sensorA_seg_name = 'SEGMENT_RIGHT_FOOT'\n",
-    "    sensorB_seg_name = 'SEGMENT_LEFT_FOOT'\n",
+    "    \n",
+    "    a = 70; b= 145\n",
+    "    tempi_range = np.arange(a,b,1)\n",
+    "    subdir = \"hand\"\n",
+    "    mode= \"zero_uni\"\n",
+    "    \n",
+    "    sensorA_seg_name = 'SEGMENT_RIGHT_HAND'\n",
+    "    sensorB_seg_name = 'SEGMENT_LEFT_HAND'\n",
     "\n",
     "    sensorA_pos_data = motion_data['position'][sensorA_seg_name][start_f:end_f, :]    # size (n, 3)    [start_f:end_f,:]\n",
     "    sensorB_pos_data = motion_data['position'][sensorB_seg_name][start_f:end_f, :]    # size (n, 3)    [start_f:end_f,:]\n",
@@ -529,7 +555,7 @@
     "    bpm_axes = []\n",
     "    mag_axes = []\n",
     "\n",
-    "    mode= \"zero_bi\"\n",
+    "    \n",
     "    for ax in range(3):\n",
     "        \n",
     "        posA_min, posA_max = np.min(sensorA_position[:, ax]), np.max(sensorA_position[:, ax])\n",
@@ -614,7 +640,7 @@
     "# dance_bpm = data_handler.calc_tempo_from_onsets(dance_onset)\n",
     "\n",
     "results_df = pd.DataFrame(result)\n",
-    "csv_filename = f\"./results/pos_2s/foot/peraxis/foot_peraxis_{mode}_70_145.csv\"\n",
+    "csv_filename = f\"./results/pos_2s/au/tempo_{a}_{b}/{subdir}/{subdir}_{mode}_{a}_{b}.csv\"\n",
     "results_df.to_csv(csv_filename, index=False)\n",
     "print(f\"Results saved to {csv_filename}\")  \n",
     "\n",
