--- a/tempo_estimation_velocity_2S_perAxis.ipynb
+++ b/tempo_estimation_velocity_2S_perAxis.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,9 @@
     "    mocap_fps = 240\n",
     "    window_size = int(240*w_sec)\n",
     "    hop_size = int(240*h_sec)\n",
-    "    tempi_range = np.arange(70,145,1)\n",
+    "    \n",
+    "    a = 70; b = 145\n",
+    "    tempi_range = np.arange(a,b,1)\n",
     "\n",
     "    sensorA_seg_name = 'SEGMENT_RIGHT_FOOT'\n",
     "    sensorB_seg_name = 'SEGMENT_LEFT_FOOT'\n",
